# pendulibrary

./: .gitignore  __init__.py  pyproject.toml  readme.md
database/: DD_long_period_initial.npz  DD_longe_period_initial.npz  DD_short_period_P2b_asym.npz  DD_short_period_bifurcation2_asym.npz  DD_short_period_initial.npz  DDlp-B1.npz  DDlp-B2.npz  DDlp-P2a.npz  DDlp-P2b.npz  DDlp-P2c.npz  DDlp-P3a.npz  DDlp-P3b.npz  DDlp-P3c.npz  DDlp-P4a.npz  DDlp-P4b.npz  DDlp.npz  DDsp-B1-B.npz  DDsp-B1-P2a.npz  DDsp-B1-P2b.npz  DDsp-B1-P2bm.npz  DDsp-B1-P3a.npz  DDsp-B1-P3b.npz  DDsp-B1.npz  DDsp-B2-P2a.npz  DDsp-B2.npz  DDsp-P2a-B1.npz  DDsp-P2a.npz  DDsp-P2b-B1.npz  DDsp-P2b-B2.npz  DDsp-P2b.npz  DDsp-P2b_asym.npz  DDsp-P2c-check.npz  DDsp-P2c.npz  DDsp-P2d-check.npz  DDsp-P2d.npz  DDsp-P2e.npz  DDsp-P2f.npz  DDsp-P3a.npz  DDsp-P3b.npz  DDsp-P4a-B1.npz  (+29 more)
scripts/: add_to_fam.ipynb  bifurcate copy.ipynb  bifurcate.ipynb  bifurcate_1.ipynb  bifurcate_2.ipynb  bifurcate_3 copy.ipynb  compare_fams.ipynb  go-backward.ipynb  gui.ipynb  init_families.ipynb  init_families_testing.ipynb  linear_solns.ipynb  make_gifs.ipynb  make_plot_grids.ipynb  mp4togif.ipynb  paper_stuff.ipynb  preprop.ipynb  pretty_plots.ipynb  test.ipynb
src/pendulibrary/: DOP853_coefs.py  __init__.py  common.py  common_targetters.py  continuation.py  integrate.py  interpolate.py  plotters.py  targeter.py  utils.py
src/pendulibrary/TODO/: bifurcation_search.py
